{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 141,
  "lineage": "49921bfc-94d7-8fcd-8420-bb56f2f1b983",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb5753fed652657e",
            "arn": "arn:aws:ec2:eu-west-3:481637381865:instance/i-040e82f909226a043",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040e82f909226a043",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "botlanekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06163e16d873de120",
            "private_dns": "ip-10-123-0-154.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.0.154",
            "public_dns": "ec2-52-47-199-17.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.199.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd73b890eba7bf9f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ed809ee8ac3ff0e",
            "tags": {
              "Name": "dev_node"
            },
            "tags_all": {
              "Name": "dev_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca75f4b619c6e217"
            ]
          },
          "dependencies": [
            "aws_key_pair.botlane_auth",
            "aws_security_group.botlane_sg",
            "aws_subnet.botlane_public_subnet",
            "aws_vpc.botlane_vpc",
            "data.aws_ami.botlane_server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "botlane_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:481637381865:internet-gateway/igw-0383aae1b0f207142",
            "id": "igw-0383aae1b0f207142",
            "owner_id": "481637381865",
            "tags": {
              "Name": "botlane_dev_igw"
            },
            "tags_all": {
              "Name": "botlane_dev_igw"
            },
            "vpc_id": "vpc-0f2394507a5735ca8"
          },
          "dependencies": [
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0383aae1b0f207142",
            "id": "r-rtb-0c6ab79b475c5b90e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6ab79b475c5b90e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.botlane_internet_gateway",
            "aws_route_table.botlane_public_rt",
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "botlane_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:481637381865:route-table/rtb-0c6ab79b475c5b90e",
            "id": "rtb-0c6ab79b475c5b90e",
            "owner_id": "481637381865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0383aae1b0f207142",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "botlane_dev_public_rt"
            },
            "tags_all": {
              "Name": "botlane_dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2394507a5735ca8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "botlane_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5781a00db43141",
            "route_table_id": "rtb-0c6ab79b475c5b90e",
            "subnet_id": "subnet-07ed809ee8ac3ff0e"
          },
          "dependencies": [
            "aws_route_table.botlane_public_rt",
            "aws_subnet.botlane_public_subnet",
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "botlane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:481637381865:security-group/sg-0ca75f4b619c6e217",
            "description": "botlane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca75f4b619c6e217",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.101.105.36/32",
                  "134.238.70.239/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "botlane_sg",
            "name_prefix": "",
            "owner_id": "481637381865",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2394507a5735ca8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "botlane_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:481637381865:subnet/subnet-07ed809ee8ac3ff0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.123.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed809ee8ac3ff0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481637381865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "botlane_dev_public"
            },
            "tags_all": {
              "Name": "botlane_dev_public"
            },
            "vpc_id": "vpc-0f2394507a5735ca8"
          },
          "dependencies": [
            "aws_vpc.botlane_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "botlane_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:481637381865:vpc/vpc-0f2394507a5735ca8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0cebba0f4e6f67498",
            "default_route_table_id": "rtb-06885ce144a2a8f0f",
            "default_security_group_id": "sg-0a60131a9c797d86e",
            "dhcp_options_id": "dopt-038f9c10b63cd3a0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2394507a5735ca8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06885ce144a2a8f0f",
            "owner_id": "481637381865",
            "tags": {
              "Name": "botlane_dev"
            },
            "tags_all": {
              "Name": "botlane_dev"
            }
          }
        }
      ]
    }
  ]
}